<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_crear_cuenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.climper.docenciaapp.ui.view.activity.CrearCuentaActivity">

    <include android:id="@+id/include_crear_cuenta" layout="@layout/toolbar" />

    <ScrollView
        android:layout_below="@+id/include_crear_cuenta"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_crearcuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cuenta_nombre"
                    android:hint="@string/hint_text_crear_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_crearcuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cuenta_apellido"
                    android:hint="@string/hint_text_crear_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_crearcuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cuenta_dni"
                    android:hint="@string/hint_text_crear_dni"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_crearcuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cuenta_celular"
                    android:hint="@string/hint_text_crear_celular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_crearcuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cuenta_correo"
                    android:hint="@string/hint_text_crear_correo"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_user_crear"
                android:text="@string/text_btn_crear"
                android:theme="@style/RaisedButtonDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
