<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.climper.docenciaapp.ui.view.activity.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="Climper"
            android:textColor="@android:color/white"
            android:textSize="90dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="0.6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:typeface="monospace"
            android:fontFamily="cursive"
            android:textStyle="normal|bold"/>

        <LinearLayout
            android:layout_weight="0.4"
            android:orientation="vertical"
            android:padding="@dimen/padding_horizontal_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.design.widget.TextInputLayout
                android:theme="@style/EditTextWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_user_usuario"
                    android:hint="@string/hint_text_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:theme="@style/EditTextWhite"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_user_password"
                    android:inputType="textPassword"
                    android:hint="@string/hint_text_contraseña"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_user_login"
                android:theme="@style/RaisedButtonDark"
                android:text="@string/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/createHere"
                    android:text="@string/text_crear_cuenta"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/textsize_crear_cuenta"
                    android:onClick="goCreateAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
